docs: Documentação dos recursos de tickets e card do raffle com Swagger
